testsuite/tests/typecheck/should_fail/ExplicitSpecificity8.stderr

ExplicitSpecificity8.hs:9:19: error:
    Inferred type variables are not allowed here
